[gd_scene load_steps=13 format=3 uid="uid://cljye56wi53e8"]

[ext_resource type="Script" path="res://Enemies/enemy_bat.gd" id="1_wip1a"]
[ext_resource type="Texture2D" uid="uid://dg6jtka113eq1" path="res://Assets/Graphics/sprites/sprites_enemies.png" id="2_l26j3"]
[ext_resource type="AudioStream" uid="uid://b86wlkuhlqeoj" path="res://Assets/Sounds/sfx/effect_slash.wav" id="3_db574"]
[ext_resource type="AudioStream" uid="uid://c6iipfrjpw3bf" path="res://Assets/Sounds/sfx/effect_death.wav" id="4_sq5xc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t53g6"]
atlas = ExtResource("2_l26j3")
region = Rect2(267, 386, 89, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsdj0"]
atlas = ExtResource("2_l26j3")
region = Rect2(89, 386, 89, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqsvy"]
atlas = ExtResource("2_l26j3")
region = Rect2(178, 386, 89, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nduq"]
atlas = ExtResource("2_l26j3")
region = Rect2(0, 386, 89, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uumw"]
atlas = ExtResource("2_l26j3")
region = Rect2(89, 386, 89, 63)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cx1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t53g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsdj0")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqsvy")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"dead",
"speed": 7.0
}, {
"frames": [],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nduq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uumw")
}],
"loop": true,
"name": &"flying",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4klqh"]
size = Vector2(48, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kt5p"]
size = Vector2(64, 48)

[node name="enemyBat" type="CharacterBody2D" groups=["Persist", "enemies"]]
z_index = 1
texture_filter = 1
collision_layer = 0
script = ExtResource("1_wip1a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_5cx1g")
animation = &"flying"

[node name="AttackingTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="AttackedTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="DeadTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]
light_mask = 2
visibility_layer = 2
collision_layer = 6
collision_mask = 2
input_pickable = false
monitoring = false
monitorable = false

[node name="main_collision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4klqh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7kt5p")

[node name="particle_limiter" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_db574")

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_sq5xc")
volume_db = 5.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.0980392)
rect = Rect2(-500, -500, 1000, 1000)

[connection signal="timeout" from="AnimatedSprite2D/AttackingTimer" to="." method="_on_attacking_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/AttackedTimer" to="." method="_on_attacked_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/DeadTimer" to="." method="_on_dead_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="particle_limiter" to="." method="_on_particle_limiter_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
